2021-06-29  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): use getopt_long, add --help as synonym of -h and -V/--version

2021-06-17  Omar Polo  <op@omarpolo.com>

	* gmid.1: document `log' option

2021-06-16  Omar Polo  <op@omarpolo.com>

	* parse.y (yylex): drop the dependency on lex by implementing
	yylex by ourselves (the actual implementation is based off doas'
	parse.y).  This gave us various benefits, like cleaner code, \ to
	break long lines, better handling of quotes etc...

2021-06-11  Omar Polo  <op@omarpolo.com>

	* parse.y (servopt): add `param' keyword

	* fcgi.c (send_fcgi_req): send GATEWAY_INTERFACE, AUTH_TYPE,
	REMOTE_USER, TLS_CLIENT_ISSUER, TLS_CLIENT_HASH, TLS_VERSION,
	TLS_CIPHER, TLS_CIPHER_STRENGTH and TLS_CLIENT_NOT_BEFORE/AFTER.
	(send_fcgi_req): support a custom list of params

2021-05-24  Omar Polo  <op@omarpolo.com>

	* gg.c: move `gg' to regress, as it's only used for the tests

2021-05-12  Omar Polo  <op@omarpolo.com>

	* utils.c (gen_certificate): don't add gmid as organisation when generating the certificate, and now it set the version 3, so it's compatible with java/android

2021-05-09  Omar Polo  <op@omarpolo.com>

	* server.c (apply_fastcgi): added fastcgi support!

2021-05-03  Omar Polo  <op@omarpolo.com>

	* parse.y: errors on duplicate values instead of silently using only the last value.

2021-04-30  Omar Polo  <op@omarpolo.com>

	* server.c (fmt_sbuf): ensure %p (path) is always absolute

	* gmid.c (load_vhosts): allow ``root'' rule to be specified per-location block

2021-04-29  Omar Polo  <op@omarpolo.com>

	* parse.y (servopt): added ``alias'' option to define hostname aliases for a server

2021-04-28  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): pidfile support with `-P pidfile'

2021-04-27  Omar Polo  <op@omarpolo.com>

	* parse.y (servopt): added ``env'' option to define environment vars for CGI scripts

	* log.c (fatal): lower the log priority for fatal errors from CRIT to ERR
